--- a/_posts/2021-10-07-first.md
+++ b/_posts/2021-10-07-first.md
@@ -1,8 +1,17 @@
 ---
-Title: My First Python Class
+Title: My Python Class (1/4)
 ---
 
-# 첫 수업을 들었어요.
+# First Python Lecture
 
 유튜브 링크: https://www.youtube.com/watch?v=rfscVS0vtbw
 
+
+
+**Python1 (2021.10.02 토)**
+
+
+
+**Variables & Data Types**
+
+![image-20211007154249367](../images/2021-10-07-first/image-20211007154249367.png)
